# fee-abstraction

./: .gitignore  Cargo.toml  README.md  build-and-start-network.sh
contracts/crosschain-swaps/: Cargo.toml
contracts/crosschain-swaps/src/: execute.rs
contracts/cw-fee-abtraction/: Cargo.toml  README.md
contracts/cw-fee-abtraction/src/: contract.rs  helpers.rs
contracts/cw-ics20-swap/: Cargo.toml
contracts/cw-ics20-swap/src/: contract.rs  error.rs  ibc.rs  ibc_msg.rs  lib.rs  msg.rs  parse.rs
contracts/swaprouter/: Cargo.toml
contracts/swaprouter/src/: error.rs  msg.rs
docs/: design.md  fee_abstraction.drawio
fa-chain/: Makefile  go.mod  go.sum  readme.md
fa-chain/app/: app.go  encoding.go  simulation_test.go  test_setup.go
fa-chain/app/apptesting/: test_helpers.go
fa-chain/cmd/fachaind/: main.go
fa-chain/cmd/fachaind/cmd/: root.go
fa-chain/docs/static/: openapi.yml
fa-chain/proto/fachain/: genesis.proto  params.proto  query.proto  tx.proto
fa-chain/proto/fachain/feeabstraction/: genesis.proto  host_zone.proto  params.proto  query.proto  tx.proto
fa-chain/proto/fachain/interchainquery/v1/: genesis.proto  messages.proto  query.proto
fa-chain/proto/feeabstraction/: genesis.proto  query.proto  tx.proto
fa-chain/proto/interchainquery/v1/: query.proto
fa-chain/scripts/: protocgen.sh
fa-chain/testutil/keeper/: fachain.go
fa-chain/testutil/network/: network.go
fa-chain/x/fachain/: genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
fa-chain/x/fachain/client/cli/: query.go  query_params.go  tx.go
fa-chain/x/fachain/keeper/: grpc_query.go  grpc_query_params.go  grpc_query_params_test.go  keeper.go  msg_server.go  msg_server_test.go  params.go  params_test.go
fa-chain/x/fachain/types/: errors.go  genesis_test.go  keys.go  query.pb.go
fa-chain/x/feeabstraction/: genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
fa-chain/x/feeabstraction/client/cli/: query.go  query_params.go  tx.go
fa-chain/x/feeabstraction/keeper/: abci.go  abci_test.go  grpc_query.go  grpc_query_params.go  grpc_query_params_test.go  host_zone.go  icqcallbacks.go  keeper.go  keeper_test.go  msg_server.go  msg_server_test.go  params.go  params_test.go
fa-chain/x/feeabstraction/types/: genesis.pb.go  genesis_test.go  keys.go  params.pb.go  query.pb.gw.go  tx.pb.go
fa-chain/x/interchainquery/: genesis.go  handler.go  module.go
fa-chain/x/interchainquery/client/cli/: query.go
fa-chain/x/interchainquery/keeper/: abci.go  grpc_query.go  keeper.go  keeper_test.go  msg_server.go  msg_submit_query_response_test.go  new_query_test.go  queries.go
fa-chain/x/interchainquery/types/: genesis.pb.go  messages.pb.go  query.pb.go
scripts/: build_contract.sh  contract_deploy.sh  deploy_contract.sh  vars.sh
scripts/contract-interaction/: add_route_to_swap_router.sh  exec_crosschain_swap.sh  list-channels.sh  query_osmosis_pool_info.sh  test_ibc.sh  transfer-cross-chain.sh
scripts/network/: Dockerfile.fachain  Dockerfile.juno  Dockerfile.osmosis  Dockerfile.relayer  build-network.sh  docker-compose.yml  fachain-osmosis-pool.json  init-chain.sh  juno-osmosis-pool.json  relayer-config.yaml  setup-relayer.sh  setup-sc-relayer.sh  start-network.sh
