[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.package]
version    = "0.0.1"
edition    = "2021"
homepage   = "https://github.com/Smartosc-Blockchain"
repository = "https://github.com/Smartosc-Blockchain/fee-abstraction"
license    = "Apache-2.0"

[workspace.dependencies]
cosmwasm-schema     = "1.1.2"
cosmwasm-std        = {version = "1.1.2", features = ["stargate"]}
cosmwasm-storage    = "1.1.2"
cw2                 = "1.0.0"
cw-storage-plus     = "1.0.1"
cw-utils            = "1.0.1"
schemars            = "0.8.8"
osmosis-std         = "0.13.2"
serde               = { version = "1.0.133", default-features = false, features = ["derive"] }
thiserror           = "1.0.31"
url                 = "2.2.2"
cw-multi-test       = "0.16.0"
osmosis-testing     = "0.13.2"
prost               = "0.11.2"
prost-types         = "0.11.2"
bech32              = "0.9.1"
serde-json-wasm     = "0.5.0"
serde-cw-value      = "0.7.0"
osmosis-std-derive  = "0.13.2"

[profile.release.package.osmo-proto]
codegen-units = 1
incremental = false

[profile.release.package.cw-fee-abstraction]
codegen-units = 1
incremental = false

[profile.release.package.cw-ics20-swap]
codegen-units = 1
incremental = false

[profile.release.package.swaprouter]
codegen-units = 1
incremental = false

[profile.release.package.crosschain-swaps]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false