[package]
name        = "crosschain-swaps"
authors     = ["Nicolas Lara <nicolaslara@gmail.com>"]
version     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use imported feature to disable all instantiate/execute/query exports
imported = []

[dependencies]
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
cw2                 = { workspace = true }
schemars            = { workspace = true }
osmosis-std         = { workspace = true }
serde               = { workspace = true }
thiserror           = { workspace = true }
swaprouter          = { path = "../swaprouter", features = ["imported"] }
cw-utils            = { workspace = true }
serde-json-wasm     = { workspace = true }
serde-cw-value      = { workspace = true }
prost               = { workspace = true }
osmosis-std-derive  = { workspace = true }
bech32              = { workspace = true }

[dev-dependencies]
cw-multi-test       = { workspace = true }
osmosis-testing     = { workspace = true }
